--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
-    "check": "tsc",
+    "lint": "eslint --max-warnings=0 .",
+    "format": "prettier --write .",
+    "check": "tsc --noEmit",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "seed:samples": "tsx scripts/seed-sample-patients.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
